# ORAC

./: .gitignore  README.md  TODO.md  pyproject.toml
docs/: chat-control-plane.md  council-contract.md  edge-check-council-design.md  harness-gap-analysis.md  hermes-agent-lessons.md  karpathy_agent_guidelines.md  knowledge.md  merge_design.md  model-selection.md  roadmap.md  rugged-decomposition-pipeline.md  spec-group2-comms.md  spec-harness-gaps-A-E.md  stale_board_error_handling.md  style-guide.md  tool-broker-plan-review.md  tool-categories.md
scripts/: Restart-ORAC.cmd  Start-ORAC.cmd  Start-ORAC.ps1  browser_foundation_check.py  soak_validate.py  validate_browser_foundation.py  validate_governance_path.py
tests/: test_agency.py  test_board_merge.py  test_broker.py  test_browser_brain.py  test_browser_primitive.py  test_browser_verify.py  test_builder.py  test_chat_config.py  test_chat_gateway.py  test_chat_signon.py  test_checkpoint.py  test_comms.py  test_council.py  test_council_types.py  test_credentials.py  test_decomposition.py  test_decomposition_runtime.py  test_dispatch_gate.py  test_edit_file.py  test_event_log_merge.py  test_governance_validation_script.py  test_intent_ledger.py  test_knowledge.py  test_lenses.py  test_metrics.py  test_model_routing.py  test_notify.py  test_orchestrator_frame.py  test_plan_review.py  test_policy.py  test_reviews_cli.py  test_rollback_contract.py  test_safety_gate.py  test_scrum.py  test_self_tune.py  test_shared_lessons.py  test_skills_adapters.py  test_skills_governance.py  test_standing_grants.py  test_storage.py  (+3 more)
(+84 files in other folders)
