[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orac"
version = "0.1.0"
description = "A local scrum-of-agents task runner."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ORAC" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
audio = [
  "openai-whisper>=20231117",
  "sounddevice>=0.4.6",
  "pyttsx3>=2.90",
]
chat = [
  "slack-bolt>=1.21.0",
]

[project.scripts]
orac = "orac.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orac = ["prompts/*.json", "prompts/*.md", "tools/*.json", "schemas/*.json", "ui/*.html", "ui/*.css", "ui/*.js", "browser_selectors.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
